--- a/take-a-pet/style.css
+++ b/take-a-pet/style.css
@@ -61,6 +61,8 @@ header h1 {
     width: 1100px;
     margin: 0 auto;
     padding: 40px;
+    min-height: 100%;
+    margin-bottom: -7px;
 }
 
 .mainpicture {
@@ -176,11 +178,6 @@ html, body {
 
 /*como-funcional styles*/
 
-.frase-apoio {
-    margin-top: 20px;
-    font-style: italic;
-}
-
 .casos {
     margin-top: 20px;
     font-weight: bold;
@@ -202,9 +199,52 @@ html, body {
 
 #casos img {
     margin-top: 15px;
-    width: 50px;
+    width: 70px;
+    margin-left: 10px;
 }
 
+.figuras-cenas{
+    margin: 0 auto;
+}
+
+.figuras-cenas img{
+    display: inline-block;
+    margin-right: 50px;
+    height: 30%;
+    width: 30%;
+}
+
+.txt-cenas p {
+    display: inline-block;
+    font-size: 1em;
+    text-align: center;
+    margin-right: 30px;
+    width: 100px;
+    vertical-align: middle;
+    padding-bottom: 35px;
+    overflow-wrap: break-word;
+}
+
+/*
 #caso-um {
     display: block;
+    margin-bottom: 30px;
 }
+
+#caso-um p{
+    font-size: 1em;
+    text-align: center;
+    width: 180px;
+    height: 80px;
+    margin-left: 15px;
+    margin-right: 30px;
+    vertical-align: middle;
+    padding-bottom: 35px;
+}   
+
+.cenas {
+    display: inline-block;
+    height: 100px;
+}
+*/
+
